# gapc

./: .cproject  .gitignore  .project  .travis.yml  @  INSTALL  Makefile  README.md  ac_makefile.in  ac_reconf  aclocal.m4  adp_mode.hh  algebra.cc  algebra.hh  alt.cc  alt.hh  arg.hh  ast.cc  ast.hh  at_install.sh  backtrack.cc  backtrack.hh  backtrack_base.cc  backtrack_base.hh  cc.cc  cebi_install.sh  changelog.txt  char_visitor.hh  classify_visitor.cc  codegen.hh  config.mf.in  configure  configure.ac  const.hh  const_fwd.hh  cpp.cc  cpp.hh  driver.cc  driver.hh  flake.nix  (+64 more)
.ci/: deploy.sh  dput.cf  id_janssenlab_launchpad.gpg  importGPGkey.sh  pubring.auto  secring.auto.gpg
.ci/debian/: control
.github/workflows/: c-cpp.yml  linting.yml  outside.yml  pytorch_interface.yml  reproduce_issue.yml
.metadata/: version.ini
ac_local/: ax_prog_bison.m4
ambiguity_cfg_gen/: algebra_function_info_attribute.hh  generate_ambiguity_cfg.hh  grammar_vm_code.cc  grammar_vm_command.cc  grammar_vm_command.hh  grammar_vm_function_compiler.cc  grammar_vm_function_compiler.hh  grammar_vm_stack.cc  parameter_position_attribute.hh  regular_expression_info_attribute.cc  variable_context.hh
cfg/: cfg.hh  remove_unused_productions.cc
config-templates/: cebitec_linuxgcc.mf  cebitec_linuxgcc48.mf  cebitec_osx.mf  cebitec_solarisgcc.mf  cygwin.mf  example_local_config.mf  generic.mf  macosx.mf  macosx_ports.mf  solarisgcc.mf  sun.mf  ubuntuPPA.mf  ubuntuPPAtgatter.mf
debian/: changelog  control  copyright  rules
docker/: dockerfile_14.04  dockerfile_16.04  dockerfile_18.04  dockerfile_20.04  dockerfile_20.10
documentation/: INSTALL  LICENSE  deps  developer_notes  gapc on windows.txt  license_header  notes  small_fixes  unittest
expr/: base.hh  fn_call.cc  fn_call.hh  new.cc  new.hh  vacc.cc  vacc.hh
include/rtlib/: algebra.hh  asymptotics.hh  backtrack.hh  cstr.h  float_accuracy_operators.hh  generic_main.cc  generic_opts.hh  hash.hh  hash_stats.hh  hashlist.hh  hashtng.hh  list.hh  map_pool.hh  move.hh  pareto_yukish_ref.hh  rope.hh  rules.hh  sample.hh  shape.hh  shape_alph.hh  singleton.hh  string.cc  string.hh  subopt.hh  subsequence.hh  vector_sparse.hh
librna/: Makefile  config.h  config.h.in  configure  configure.ac  out_main.cc  readme  rnalib.c  rnalib.fpio  rnalib.h  rnalib.i  rnalib.pio  test.c
librna/ViennaRNA/: alphabet.c  dp_matrices.h  fold_compound.h  model.c  model.h
librna/ViennaRNA/constraints/: hard.h  soft.h
librna/ViennaRNA/io/: io_utils.c
librna/ViennaRNA/static/misc/: dna_mathews1999.hex  rna_andronescu2007.hex  rna_langdon2018.hex  rna_turner1999.hex
librna/ViennaRNA/utils/: basic.h  string_utils.c  strings.h  structures.h  utils.c
librna/vienna/: config.h  energy_par.pio  fold_vars.pio  params.c  params.h  params.pio  read_epars.c  read_epars.pio  rna_xia1998.par  utils.c  utils.h  utils.pio
literate/: Makefile  lit_parse.y  literate.l
m4/: ax_boost_base.m4  ax_boost_fileystem.m4  ax_boost_serialization.m4  fpic_flag.m4  os_flags.m4
makefiles/: deps.mf  gapc_local.mf  lexyaccxx.mf  run-librna.sh  run.sh
printer/: gap.cc  gap.hh
pylib/: gapc.py
rtlib/: adp.hh  algebra.hh  asymptotics.hh  backtrack.hh  batch.hh  bench.hh  bigint.hh  bitops.hh  cm_alph.hh  cstr.h  empty.hh  erase.hh  fair_mutex.hh  fair_shared_mutex.hh  filter.hh  float_accuracy_operators.hh  generic_main.cc  generic_opts.hh  generic_pytorch_interface.cc  hash.hh  hash_stats.hh  hashlist.hh  hashtng.hh  list.hh  loaded.hh  map_pool.hh  move.hh  multipool.hh  output.hh  pareto_dom_sort.hh  pareto_yukish.hh  pareto_yukish_ref.hh  pool.hh  push_back.hh  range.hh  range_orig.hh  rational.hh  ref.hh  rna.hh  rope.hh  (+16 more)
rtlib/adp_specialization/: pareto_0_nosort_block.hh  pareto_0_nosort_step.hh  pareto_1_sorted_block.hh  pareto_1_sorted_step.hh  pareto_3_yukish_block.hh  pareto_3_yukish_step.hh  sort_block.hh
share/gapc/: config_linux-gnu.mf
specialize_grammar/: actual_parameter_position_attribute.cc  actual_parameter_position_attribute.hh  add_special_axiom_to_cfg.hh  call_trace.hh  choice_function_application_attribute.hh  cycle_break_point_attribute.hh  rewrite_non_productive_cfg_rules.cc  set_of_cycle_sets.cc  set_of_cycle_sets.hh
src/: adp_mode.cc  adp_mode.hh  algebra.cc  algebra.hh  alt.cc  alt.hh  alt_fwd.hh  arg.cc  arg.hh  ast.cc  ast.hh  backtrack.cc  backtrack.hh  backtrack_base.cc  backtrack_base.hh  bool.hh  cc.cc  cc.hh  char_visitor.cc  char_visitor.hh  checkpoint.hh  classify_visitor.cc  classify_visitor.hh  codegen.cc  codegen.hh  const.cc  const.hh  const_fwd.hh  cpp.cc  cpp.hh  cyk.cc  cyk.hh  dep_analysis.cc  dep_analysis.hh  driver.cc  driver.hh  expr.cc  expr.hh  expr_fwd.hh  filter.cc  (+108 more)
src/ambiguity_cfg_gen/: algebra_function_info_attribute.cc  algebra_function_info_attribute.hh  generate_ambiguity_cfg.cc  generate_ambiguity_cfg.hh  grammar_vm.cc  grammar_vm.hh  grammar_vm_code.cc  grammar_vm_code.hh  grammar_vm_command.cc  grammar_vm_command.hh  grammar_vm_function_compiler.cc  grammar_vm_function_compiler.hh  grammar_vm_function_exec_environment.cc  grammar_vm_function_exec_environment.hh  grammar_vm_stack.cc  grammar_vm_stack.hh  parameter_position_attribute.cc  parameter_position_attribute.hh  regular_expression_info_attribute.cc  regular_expression_info_attribute.hh  transform_gap_to_cfg.cc  transform_gap_to_cfg.hh  var_info_item.cc  var_info_item.hh  variable_context.cc  variable_context.hh
src/cfg/: cfg.cc  cfg.hh  remove_unused_productions.cc  remove_unused_productions.hh
src/expr/: base.cc  base.hh  fn_call.cc  fn_call.hh  mod.hh  new.cc  new.hh  (+3 more)
statement/: base.hh  block_base.hh  fn_call.cc  fn_call.hh  hash_decl.hh  table_decl.cc  while.cc  while.hh
testdata/: fp_eq  fp_eq.c  log.sh  stats.sh  tool.sh
type/: backtrace.cc  base.cc
util/: annotate_cycles.cc  annotate_reducible_attributes.cc  annotate_reducible_attributes.hh  attribute.hh  cycle_mark_attribute.cc  cycle_set.cc  cycle_set_utils.cc  cycle_set_utils.hh  naming_domain.hh  remove_all_attributes.hh  remove_cycle_set_attributes.hh  remove_first_set_attributes.hh
(+633 files in other folders)
