dnl Every other copy of the package version number gets its value from here
AC_INIT([ViennaRNA],[2.4.17],[rna@tbi.univie.ac.at],[ViennaRNA],[http://www.tbi.univie.ac.at/RNA])

dnl create a config.h file (Automake will add -DHAVE_CONFIG_H)
AC_CONFIG_HEADERS([config.h])

AC_USE_SYSTEM_EXTENSIONS
AC_CHECK_FUNCS([strdup])

AC_OUTPUT
